[gd_scene load_steps=41 format=3 uid="uid://i0pg5f7pc445"]

[ext_resource type="Script" uid="uid://dny6lg25m75y7" path="res://scripts/player.gd" id="1_v6fml"]
[ext_resource type="Texture2D" uid="uid://cjf3c7pcs123l" path="res://assets/sprites/characters/Rosali.png" id="3_cw2d6"]
[ext_resource type="Script" uid="uid://scndil1j0hdu" path="res://scripts/stats/StatsComponent.gd" id="5_70d11"]
[ext_resource type="AudioStream" uid="uid://dtgs8hm2cwwxh" path="res://assets/audio/sfx/grass/grass_footstep3.wav" id="5_khinc"]
[ext_resource type="AudioStream" uid="uid://dnxdxonett0a1" path="res://assets/audio/sfx/grass/grass_footstep4.wav" id="6_bruh7"]
[ext_resource type="Script" uid="uid://bu1fg0bjwbliq" path="res://scripts/resources/StatsResource.gd" id="6_cw2d6"]
[ext_resource type="Script" uid="uid://bqtthbimi2o3t" path="res://scripts/resources/CompanionFollow.gd" id="8_bruh7"]
[ext_resource type="Script" uid="uid://blvyq0nyp35lh" path="res://scripts/stats/LevelComponent.gd" id="8_lcrjy"]
[ext_resource type="Resource" uid="uid://cmy11xno3xj46" path="res://Data/BaseClasses/Warrior.tres" id="9_c62qr"]
[ext_resource type="Script" uid="uid://3iudrjaxi7sd" path="res://scenes/Actors/KnownAbilitiesComponent.gd" id="10_yu6nc"]
[ext_resource type="Script" uid="uid://dseyxpw7thnq6" path="res://Actors/AnimationBridge.gd" id="11_58b6g"]
[ext_resource type="Script" uid="uid://b2r744xdpepb6" path="res://scenes/Actors/status/StatusConditions.gd" id="12_jd8gt"]
[ext_resource type="Script" uid="uid://0cb22lkxb2rs" path="res://scenes/Actors/status/StatusVisualProxy.gd" id="13_f350c"]
[ext_resource type="Script" uid="uid://ckl353a2k5wbo" path="res://AI/CompanionAbilityAI.gd" id="14_ibfhk"]
[ext_resource type="Script" uid="uid://d4anrr3pv4crd" path="res://scripts/PassiveAbilityApplier.gd" id="15_60twb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_khinc"]
atlas = ExtResource("3_cw2d6")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bruh7"]
atlas = ExtResource("3_cw2d6")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6eyey"]
atlas = ExtResource("3_cw2d6")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3wef"]
atlas = ExtResource("3_cw2d6")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4126"]
atlas = ExtResource("3_cw2d6")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkdrv"]
atlas = ExtResource("3_cw2d6")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7iby"]
atlas = ExtResource("3_cw2d6")
region = Rect2(192, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rnld"]
atlas = ExtResource("3_cw2d6")
region = Rect2(256, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_srp4u"]
atlas = ExtResource("3_cw2d6")
region = Rect2(320, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfpux"]
atlas = ExtResource("3_cw2d6")
region = Rect2(0, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_61ith"]
atlas = ExtResource("3_cw2d6")
region = Rect2(64, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebwui"]
atlas = ExtResource("3_cw2d6")
region = Rect2(128, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfy4j"]
atlas = ExtResource("3_cw2d6")
region = Rect2(192, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gv3ic"]
atlas = ExtResource("3_cw2d6")
region = Rect2(256, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8lor"]
atlas = ExtResource("3_cw2d6")
region = Rect2(320, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6e537"]
atlas = ExtResource("3_cw2d6")
region = Rect2(0, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p07f3"]
atlas = ExtResource("3_cw2d6")
region = Rect2(64, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_viqgg"]
atlas = ExtResource("3_cw2d6")
region = Rect2(128, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgkxt"]
atlas = ExtResource("3_cw2d6")
region = Rect2(192, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsi7p"]
atlas = ExtResource("3_cw2d6")
region = Rect2(256, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jpwa"]
atlas = ExtResource("3_cw2d6")
region = Rect2(320, 320, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_cw2d6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_khinc")
}],
"loop": true,
"name": &"idle_down",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bruh7")
}],
"loop": true,
"name": &"idle_side",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6eyey")
}],
"loop": true,
"name": &"idle_up",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3wef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4126")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkdrv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7iby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rnld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_srp4u")
}],
"loop": true,
"name": &"walk_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfpux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61ith")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebwui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfy4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gv3ic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8lor")
}],
"loop": true,
"name": &"walk_side",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6e537")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p07f3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_viqgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgkxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsi7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jpwa")
}],
"loop": false,
"name": &"walk_up",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(11, 14)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_6eyey"]
streams_count = 2
stream_0/stream = ExtResource("5_khinc")
stream_1/stream = ExtResource("6_bruh7")

[sub_resource type="Resource" id="Resource_khinc"]
script = ExtResource("6_cw2d6")
metadata/_custom_type_script = "uid://bu1fg0bjwbliq"

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_v6fml")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
light_mask = 2
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_cw2d6")
animation = &"walk_up"
offset = Vector2(0, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -13)
shape = SubResource("1")

[node name="Footstep" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_6eyey")

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("5_70d11")
stats = SubResource("Resource_khinc")
auto_tick_modifiers = true
metadata/_custom_type_script = "uid://scndil1j0hdu"

[node name="CompanionFollow" type="Node2D" parent="."]
script = ExtResource("8_bruh7")

[node name="LevelComponent" type="Node" parent="."]
script = ExtResource("8_lcrjy")
stats_component_path = NodePath("../StatsComponent")
class_def = ExtResource("9_c62qr")

[node name="KnownAbilitiesComponent" type="Node" parent="."]
script = ExtResource("10_yu6nc")

[node name="AnimationBridge" type="Node" parent="."]
script = ExtResource("11_58b6g")

[node name="StatusConditions" type="Node" parent="."]
script = ExtResource("12_jd8gt")
stats_path = NodePath("../StatsComponent")

[node name="StatusVisualProxy" type="Node" parent="."]
script = ExtResource("13_f350c")
status_path = NodePath("../StatusConditions")
animator_path = NodePath("../AnimatedSprite2D")

[node name="CompanionAbilityAI" type="Node" parent="."]
script = ExtResource("14_ibfhk")

[node name="PassiveAbilityApplier" type="Node" parent="."]
script = ExtResource("15_60twb")

[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
